--- a/EmojiArt/Base.lproj/Main.storyboard
+++ b/EmojiArt/Base.lproj/Main.storyboard
@@ -92,9 +92,9 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="2KV-kL-yMH" firstAttribute="centerY" secondItem="SqU-ir-vGl" secondAttribute="centerY" id="V8G-wx-B4Z"/>
-                            <constraint firstItem="2KV-kL-yMH" firstAttribute="centerX" secondItem="SqU-ir-vGl" secondAttribute="centerX" id="ypp-3t-oE5"/>
+                            <constraint firstItem="2KV-kL-yMH" firstAttribute="centerX" secondItem="Lqp-YC-4Qt" secondAttribute="centerX" id="ypp-3t-oE5"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="neg-ED-BPW"/>
+                        <viewLayoutGuide key="safeArea" id="Lqp-YC-4Qt"/>
                     </view>
                     <toolbarItems/>
                     <modalFormSheetSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -222,11 +222,11 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="O7o-3c-HF0" secondAttribute="bottom" id="4a3-aG-3er"/>
-                            <constraint firstItem="Yly-EG-xUA" firstAttribute="trailing" secondItem="O7o-3c-HF0" secondAttribute="trailing" id="G4h-nH-K8v"/>
-                            <constraint firstItem="O7o-3c-HF0" firstAttribute="leading" secondItem="Yly-EG-xUA" secondAttribute="leading" id="Qdv-F2-6dt"/>
+                            <constraint firstItem="VvX-hu-XJx" firstAttribute="trailing" secondItem="O7o-3c-HF0" secondAttribute="trailing" id="G4h-nH-K8v"/>
+                            <constraint firstItem="O7o-3c-HF0" firstAttribute="leading" secondItem="VvX-hu-XJx" secondAttribute="leading" id="Qdv-F2-6dt"/>
                             <constraint firstItem="O7o-3c-HF0" firstAttribute="top" secondItem="RSy-AH-2or" secondAttribute="top" id="tRT-vz-HI3"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Yly-EG-xUA"/>
+                        <viewLayoutGuide key="safeArea" id="VvX-hu-XJx"/>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="O7o-3c-HF0" id="TpE-zy-JLn"/>
@@ -244,7 +244,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="LsE-Fw-bh2"/>
+                        <viewLayoutGuide key="safeArea" id="Ei1-mb-Hx0"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hz7-IM-fqT" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -285,27 +285,37 @@
                                 </connections>
                             </containerView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I36-yJ-T5f" userLabel="Composite Image View">
-                                <rect key="frame" x="0.0" y="150" width="1024" height="568"/>
+                                <rect key="frame" x="0.0" y="150" width="1024" height="618"/>
                                 <connections>
                                     <segue destination="0cP-C3-Elj" kind="embed" identifier="presentCompositeImage" id="RE1-Ee-nCN"/>
+                                </connections>
+                            </containerView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7cP-h6-qp9">
+                                <rect key="frame" x="784" y="692" width="240" height="76"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="76" id="As1-42-wY8"/>
+                                    <constraint firstAttribute="width" constant="240" id="pgO-cA-Sez"/>
+                                </constraints>
+                                <connections>
+                                    <segue destination="PHy-9t-Abf" kind="embed" identifier="presentStatsEmbedded" id="ium-6F-6RV"/>
                                 </connections>
                             </containerView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="eG7-zh-k0M" firstAttribute="leading" secondItem="5o4-wx-oSU" secondAttribute="leading" id="5Gv-4N-88O"/>
-                            <constraint firstItem="5o4-wx-oSU" firstAttribute="trailing" secondItem="eG7-zh-k0M" secondAttribute="trailing" id="H5N-aZ-hLX"/>
-                            <constraint firstItem="eG7-zh-k0M" firstAttribute="top" secondItem="5o4-wx-oSU" secondAttribute="top" id="SNS-CP-2eF"/>
-                            <constraint firstItem="I36-yJ-T5f" firstAttribute="leading" secondItem="5o4-wx-oSU" secondAttribute="leading" id="W99-tF-BTz"/>
-                            <constraint firstItem="5o4-wx-oSU" firstAttribute="bottom" secondItem="I36-yJ-T5f" secondAttribute="bottom" id="WaG-kL-UF5"/>
+                            <constraint firstItem="7cP-h6-qp9" firstAttribute="bottom" secondItem="mN6-uK-BUs" secondAttribute="bottom" id="0Te-kF-mqo"/>
+                            <constraint firstItem="eG7-zh-k0M" firstAttribute="leading" secondItem="mN6-uK-BUs" secondAttribute="leading" id="5Gv-4N-88O"/>
+                            <constraint firstItem="7cP-h6-qp9" firstAttribute="trailing" secondItem="mN6-uK-BUs" secondAttribute="trailing" id="ABw-c6-vTw"/>
+                            <constraint firstItem="mN6-uK-BUs" firstAttribute="trailing" secondItem="eG7-zh-k0M" secondAttribute="trailing" id="H5N-aZ-hLX"/>
+                            <constraint firstItem="eG7-zh-k0M" firstAttribute="top" secondItem="mN6-uK-BUs" secondAttribute="top" id="SNS-CP-2eF"/>
+                            <constraint firstItem="I36-yJ-T5f" firstAttribute="leading" secondItem="mN6-uK-BUs" secondAttribute="leading" id="W99-tF-BTz"/>
+                            <constraint firstItem="mN6-uK-BUs" firstAttribute="bottom" secondItem="I36-yJ-T5f" secondAttribute="bottom" id="WaG-kL-UF5"/>
                             <constraint firstItem="I36-yJ-T5f" firstAttribute="top" secondItem="eG7-zh-k0M" secondAttribute="bottom" id="nnM-zT-ccd"/>
-                            <constraint firstItem="5o4-wx-oSU" firstAttribute="trailing" secondItem="I36-yJ-T5f" secondAttribute="trailing" id="yTj-PY-mW5"/>
+                            <constraint firstItem="mN6-uK-BUs" firstAttribute="trailing" secondItem="I36-yJ-T5f" secondAttribute="trailing" id="yTj-PY-mW5"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="5o4-wx-oSU"/>
+                        <viewLayoutGuide key="safeArea" id="mN6-uK-BUs"/>
                     </view>
-                    <toolbarItems>
-                        <barButtonItem title="Item" id="Gbb-Jh-u9z"/>
-                    </toolbarItems>
+                    <toolbarItems/>
                     <navigationItem key="navigationItem" id="VsX-lh-weJ">
                         <barButtonItem key="leftBarButtonItem" systemItem="done" id="2fb-me-eO8">
                             <connections>
@@ -327,18 +337,21 @@
                             </barButtonItem>
                         </rightBarButtonItems>
                     </navigationItem>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="embeddedStatsHeightConstraint" destination="As1-42-wY8" id="J16-xC-M72"/>
+                        <outlet property="embeddedStatsWidthConstraint" destination="pgO-cA-Sez" id="WbZ-Rg-ptE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="781" y="-23"/>
+            <point key="canvasLocation" x="780.46875" y="-23.4375"/>
         </scene>
         <!--Composite Image View Controller-->
         <scene sceneID="uKO-Xr-hgP">
             <objects>
                 <viewController id="0cP-C3-Elj" customClass="CompositeImageViewController" customModule="EmojiArt" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="YVh-QZ-lvR">
-                        <rect key="frame" x="0.0" y="0.0" width="1024" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="1024" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ete-97-SD0" userLabel="Drop Zone">
@@ -371,14 +384,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="Ete-97-SD0" secondAttribute="trailing" id="8te-lf-rQc"/>
+                            <constraint firstItem="kbp-Sf-zOZ" firstAttribute="trailing" secondItem="Ete-97-SD0" secondAttribute="trailing" id="8te-lf-rQc"/>
                             <constraint firstAttribute="bottom" secondItem="Ete-97-SD0" secondAttribute="bottom" id="HX3-9f-r9K"/>
-                            <constraint firstItem="9KU-Z3-AWH" firstAttribute="centerX" secondItem="YVh-QZ-lvR" secondAttribute="centerX" id="MIW-7q-NDU"/>
+                            <constraint firstItem="9KU-Z3-AWH" firstAttribute="centerX" secondItem="kbp-Sf-zOZ" secondAttribute="centerX" id="MIW-7q-NDU"/>
                             <constraint firstItem="Ete-97-SD0" firstAttribute="top" secondItem="YVh-QZ-lvR" secondAttribute="top" id="gpy-Jp-V5y"/>
                             <constraint firstItem="9KU-Z3-AWH" firstAttribute="centerY" secondItem="YVh-QZ-lvR" secondAttribute="centerY" id="u3D-6L-DXa"/>
-                            <constraint firstItem="Ete-97-SD0" firstAttribute="leading" secondItem="YVh-QZ-lvR" secondAttribute="leading" id="xyP-1h-6Lc"/>
+                            <constraint firstItem="Ete-97-SD0" firstAttribute="leading" secondItem="kbp-Sf-zOZ" secondAttribute="leading" id="xyP-1h-6Lc"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6n1-9p-dce"/>
+                        <viewLayoutGuide key="safeArea" id="kbp-Sf-zOZ"/>
                     </view>
                     <connections>
                         <outlet property="dropImageHereLabel" destination="9KU-Z3-AWH" id="X6Y-4F-EZt"/>
@@ -391,6 +404,78 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="btt-rC-u3Q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1469" y="52"/>
+        </scene>
+        <!--Stats View Controller-->
+        <scene sceneID="RxS-0b-Cbh">
+            <objects>
+                <viewController id="PHy-9t-Abf" customClass="StatsViewController" customModule="EmojiArt" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" userInteractionEnabled="NO" contentMode="scaleToFill" id="oBv-gM-nc9">
+                        <rect key="frame" x="0.0" y="0.0" width="240" height="76"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="CSs-3b-AWe">
+                                <rect key="frame" x="31" y="13" width="178" height="50"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="YPV-L9-w47">
+                                        <rect key="frame" x="0.0" y="0.0" width="178" height="50"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="yxF-UX-31A">
+                                                <rect key="frame" x="0.0" y="0.0" width="77" height="50"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Size" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QWy-GC-fCB">
+                                                        <rect key="frame" x="40" y="0.0" width="37" height="25"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Modified" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aQr-fa-de3">
+                                                        <rect key="frame" x="0.0" y="25" width="77" height="25"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="gQZ-F0-HTw">
+                                                <rect key="frame" x="87" y="0.0" width="91" height="50"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="99 KBytes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DKp-7G-XYu">
+                                                        <rect key="frame" x="0.0" y="0.0" width="91" height="24"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11.11.18" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FyC-LP-U9X">
+                                                        <rect key="frame" x="0.0" y="26" width="66.5" height="24"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="CSs-3b-AWe" firstAttribute="centerY" secondItem="oBv-gM-nc9" secondAttribute="centerY" id="S2x-bF-1AG"/>
+                            <constraint firstItem="CSs-3b-AWe" firstAttribute="centerX" secondItem="Uml-Wd-RDL" secondAttribute="centerX" id="apb-e6-Yz0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Uml-Wd-RDL"/>
+                    </view>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="modifiedDateLabel" destination="FyC-LP-U9X" id="sPr-O9-ejd"/>
+                        <outlet property="sizeLabel" destination="DKp-7G-XYu" id="PiS-f4-r3o"/>
+                        <outlet property="topLevelStack" destination="CSs-3b-AWe" id="TLn-Kh-GDi"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="eJw-UA-DRf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1010" y="419"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
